restore old version of action

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,15 +1,12 @@
 name: CI
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
-    tags: ['*']
-  pull_request:
-concurrency:
-  # Skip intermediate builds: always.
-  # Cancel intermediate builds: only if it is a pull request build.
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+    tags: '*'
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -18,65 +15,54 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.8'
-        python: [3.9]
+          - '1.5' # Replace this with the minimum Julia version that your package supports. E.g. if your package requires Julia 1.5 or higher, change this to '1.5'.
+          - '1' # Leave this line unchanged. '1' will automatically expand to the latest stable 1.x release of Julia.
+          - 'nightly'
         os:
           - ubuntu-latest
         arch:
           - x64
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 🐍 ${{ matrix.python }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Set up miniconda 🐍 
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          environment-file: ./environment.yml
-          activate-environment: oggm_env
-      - name: Activate conda environment for PyCall.jl  🐍 📞
-        run: |
-          conda init bash
-          source ~/.bashrc
-          conda activate oggm_env
-          pip install --upgrade certifi
-          which python
-        env: 
-          PYTHON: /usr/share/miniconda/envs/oggm_env/bin/python
-      - name: Set ENV Variables for PyCall.jl 🐍 📞
-        run: export PYTHON=/usr/share/miniconda/envs/oggm_env/bin/python
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v1
-      - uses: julia-actions/julia-buildpkg@v1
+      - uses: actions/cache@v1
         env:
-          PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v1
         with:
-          files: lcov.info
+          file: lcov.info
   docs:
     name: Documentation
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      statuses: write
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
-          version: '1.8'
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          version: '1'
       - run: |
           julia --project=docs -e '
-            using Documenter: DocMeta, doctest
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
+      - run: |
+          julia --project=docs -e '
+            using Documenter: doctest
             using ODINN
-            DocMeta.setdocmeta!(ODINN, :DocTestSetup, :(using ODINN); recursive=true)
-            doctest(ODINN)'
+            doctest(ODINN)' 
+      - run: julia --project=docs docs/make.jl
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
