--- a/environment.yml
+++ b/environment.yml
@@ -38,3 +38,4 @@ dependencies:
     - git+https://github.com/OGGM/pytest-mpl
     - git+https://github.com/OGGM/massbalance-sandbox
     - oggm==1.6.0
+    - certifi
