--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,10 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v2
+      - name: Update CA certificates for SSL
+        run: | 
+            sudo update-ca-certificates 
+        shell: bash -el {0}
       - name: Show CA certificates for SSL
         run: | 
             echo $SSL_CERT_FILE
@@ -63,8 +67,6 @@ jobs:
 #       - name: Test OGGM installation 🔧🌎 
 #         run: pytest.oggm
 #         shell: bash -el {0}
-      - name: Update CA certificates
-        run: sudo apt-get install ca-certificates
       - name: Set ENV Variables for PyCall.jl 🐍 📞
         run: export PYTHON=/home/runner/micromamba/envs/oggm_env/bin/python
         shell: bash -el {0}
