--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -72,26 +72,26 @@ jobs:
       - uses: codecov/codecov-action@v2
         with:
           files: lcov.info
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      statuses: write
-    steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
-        with:
-          version: '1.9'
-      - uses: julia-actions/julia-buildpkg@v1
-        env:
-            PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: |
-          julia --project=docs -e '
-            using Documenter: DocMeta, doctest
-            using ODINN
-            DocMeta.setdocmeta!(ODINN, :DocTestSetup, :(using ODINN); recursive=true)
-            doctest(ODINN)'
+  # docs:
+  #   name: Documentation
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #     statuses: write
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: julia-actions/setup-julia@v1
+  #       with:
+  #         version: '1.9'
+  #     - uses: julia-actions/julia-buildpkg@v1
+  #       env:
+  #           PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
+  #     - uses: julia-actions/julia-docdeploy@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     - run: |
+  #         julia --project=docs -e '
+  #           using Documenter: DocMeta, doctest
+  #           using ODINN
+  #           DocMeta.setdocmeta!(ODINN, :DocTestSetup, :(using ODINN); recursive=true)
+  #           doctest(ODINN)'
