--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,6 +71,8 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          version: "v0.1.15"
           files: lcov.info
   # docs:
   #   name: Documentation
