--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,5 @@
 name: Run Tests
 on:
-  push:
-    branches:
-      - main
-    tags: ['*']
   pull_request:
 concurrency:
   # Skip intermediate builds: always.
@@ -64,13 +60,15 @@ jobs:
       - uses: julia-actions/cache@v1
         with:
           cache-registries: "true"
+          cache-compiled: "true"
       - uses: julia-actions/julia-buildpkg@v1
         env:
           PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
         with:
+          token: ${{secrets.CODECOV_TOKEN}}
           files: lcov.info
   # docs:
   #   name: Documentation
