Update CI again with push

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,12 @@
 name: Run Tests
 on:
-  pull_request:
+   pull_request:
+    branches:
+      - main
+   push:
+    branches:
+      - main
+    tags: '*'
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
