CompatHelper: bump compat for Flux to 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,8 @@ AbbreviatedStackTraces = "0.1.7"
 BenchmarkTools = "1.3.2"
 CPUSummary = "0.2"
 CairoMakie = "0.10"
-Flux = "0.13"
+ChainRules = "1.50"
+Flux = "0.13, 0.14"
 GR = "0.71, 0.72"
 GeoMakie = "0.5"
 IJulia = "1.2"
@@ -66,7 +67,6 @@ PyCall = "1.9"
 PyPlot = "2.11"
 Revise = "3.1"
 SciMLSensitivity = "7.20"
-ChainRules = "1.50"
 SnoopPrecompile = "1.0.3"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
