--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ AbbreviatedStackTraces = "0.1.7"
 BenchmarkTools = "1.3.2"
 CPUSummary = "0.2"
 CairoMakie = "0.10"
+ChainRules = "1.50"
 Flux = "0.13"
 GR = "0.71, 0.72"
 GeoMakie = "0.5"
@@ -60,13 +61,12 @@ OptimizationOptimisers = "0.1.2"
 OrdinaryDiffEq = "5, 6"
 PlotThemes = "3.1"
 Plots = "1.2"
-Polynomials = "2, 3"
+Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 PyCall = "1.9"
 PyPlot = "2.11"
 Revise = "3.1"
 SciMLSensitivity = "7.20"
-ChainRules = "1.50"
 SnoopPrecompile = "1.0.3"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
