--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ BenchmarkTools = "1.3.2"
 CPUSummary = "0.2"
 CairoMakie = "0.10"
 ChainRules = "1.50"
+Downloads = "1"
 Flux = "0.13, 0.14"
 GR = "0.71, 0.72"
 GeoMakie = "0.5"
