--- a/Project.toml
+++ b/Project.toml
@@ -68,6 +68,7 @@ PyPlot = "2.11"
 Revise = "3.1"
 SciMLSensitivity = "7.20"
 SnoopPrecompile = "1.0.3"
+Statistics = "1"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
 julia = "1.7"
