--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 AbbreviatedStackTraces = "0.1.7"
 BenchmarkTools = "1.3.2"
 CPUSummary = "0.2"
-CairoMakie = "0.10"
+CairoMakie = "0.10, 0.11"
 ChainRules = "1.50"
 Flux = "0.13, 0.14"
 GR = "0.71, 0.72"
