--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ CairoMakie = "0.10"
 ChainRules = "1.50"
 Flux = "0.13"
 GR = "0.71, 0.72"
+Huginn = "0.3.1"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
