--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,7 +71,12 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
         env:
           PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
+          # The SSL certificate path can be readed from the action "Check Julia SSL certifications"
+          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       - uses: julia-actions/julia-runtest@v1
+        env:
+          PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
+          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
         with:
