New architecture using Sleipnir, Huginn and Muninn (#139)
* UDEs working with experiment with different MB

Fixed a few bugs in the UDE workflow. The UDEs work suprisingly well with a different MB model. This means that using surface velocities is really a well proxy, which is robust to changes in surface elevation.

* New composite types for parameters created

* Updated mass balance model types

* New types and structs for new API

The basic structure for the new API is ready. Now we need to slowly couple it with the old workflows.

* First prototype of new API for predictions

First prototype more or less ready. The test script is running, but I need to optimize the way Results are saved in a file. Right now it's way too slow and heavy. We need to trim that down and save it as netCDF. The tests are still under construction to fit the new API. And of course, I still need to design the hardest part, the UDE.

* [WIP] Debugging PDE behaviour of new API

* First prototype of new API (#125)

* UDEs working with experiment with different MB

Fixed a few bugs in the UDE workflow. The UDEs work suprisingly well with a different MB model. This means that using surface velocities is really a well proxy, which is robust to changes in surface elevation.

* New composite types for parameters created

* Updated mass balance model types

* New types and structs for new API

The basic structure for the new API is ready. Now we need to slowly couple it with the old workflows.

* First prototype of new API for predictions

First prototype more or less ready. The test script is running, but I need to optimize the way Results are saved in a file. Right now it's way too slow and heavy. We need to trim that down and save it as netCDF. The tests are still under construction to fit the new API. And of course, I still need to design the hardest part, the UDE.

* [WIP] Debugging PDE behaviour of new API

* Plot scripts updated

* New API prototype (

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,11 +1,9 @@
 name: Run Tests
 on:
    pull_request:
-    branches:
-      - main
+    branches: []
    push:
-    branches:
-      - main
+    branches: []
     tags: '*'
 concurrency:
   # Skip intermediate builds: always.
@@ -49,7 +47,7 @@ jobs:
             which python
             conda env export
         shell: bash -el {0}
-      - name: Update certifi
+      - name: Update certifi 🔒🔑
         run: | 
             pip install --upgrade certifi
         shell: bash -el {0}
@@ -63,6 +61,9 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - name: Check Julia SSL certifications 🔎🔐
+        run: julia -e 'using NetworkOptions; println(NetworkOptions.bundled_ca_roots()); println(NetworkOptions.ca_roots())'
+        shell: bash -el {0}
       - uses: julia-actions/cache@v1
         with:
           cache-registries: "true"
@@ -70,7 +71,12 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
         env:
           PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
+          # The SSL certificate path can be readed from the action "Check Julia SSL certifications"
+          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       - uses: julia-actions/julia-runtest@v1
+        env:
+          PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
+          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
         with:
