--- a/Project.toml
+++ b/Project.toml
@@ -1,25 +1,22 @@
 name = "ODINN"
 uuid = "c36d5296-eba1-40be-a153-0a8fa632a659"
 authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>"]
-version = "0.1.0"
+version = "1.0.0"
 
 [deps]
-AbbreviatedStackTraces = "ac637c84-cc71-43bf-9c33-c1b4316be3d4"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ChainRules = "082447d4-558c-5d27-93f4-14fc19e9eca2"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
-GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
+Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
@@ -32,40 +29,34 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 
 [compat]
-AbbreviatedStackTraces = "0.1.7"
 BenchmarkTools = "1.3.2"
 CPUSummary = "0.2"
-CairoMakie = "0.10"
 ChainRules = "1.50"
 Flux = "0.13"
 GR = "0.71, 0.72"
-GeoMakie = "0.5"
+Huginn = "0.4"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
-Makie = "0.19"
 Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.1.5"
 OrdinaryDiffEq = "5, 6"
-PlotThemes = "3.1"
-Plots = "1.2"
 Polynomials = "2, 3"
 ProgressMeter = "1"
 PyCall = "1.9"
 PyPlot = "2.11"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
-SnoopPrecompile = "1.0.3"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
 julia = "1.7"
