Added slope & S to interpolation & smooth to C_values

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
