--- a/Project.toml
+++ b/Project.toml
@@ -48,6 +48,7 @@ ChainRules = "1.50"
 Downloads = "1"
 Flux = "0.13, 0.14"
 GR = "0.71, 0.72, 0.73"
+Huginn = "0.4"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
