--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.0.0"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ChainRules = "082447d4-558c-5d27-93f4-14fc19e9eca2"
+Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
@@ -19,9 +20,12 @@ Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
@@ -34,17 +38,19 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
+Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 BenchmarkTools = "1.3.2"
-CPUSummary = "0.2"
 ChainRules = "1.50"
-Flux = "0.13"
-GR = "0.71, 0.72"
-Huginn = "0.5"
+Downloads = "1"
+Flux = "0.13, 0.14"
+GR = "0.71, 0.72, 0.73"
+Huginn = "0.6"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
@@ -52,19 +58,22 @@ JLD2 = "0.4"
 Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.1.5"
+OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "5, 6"
-Polynomials = "2, 3"
+PlotThemes = "3.1"
+Plots = "1.2"
+Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 PyCall = "1.9"
 PyPlot = "2.11"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
+Statistics = "1"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
 julia = "1.7"
 
 [extras]
-CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
