--- a/Project.toml
+++ b/Project.toml
@@ -13,14 +13,14 @@ Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
-Huginn = "aa33ad36-952c-446d-ac2e-f4291b2b06f0"
+Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Muninn = "4464dba7-ec91-4867-a90e-42c611bf2148"
+Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
@@ -35,9 +35,10 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
-Sleipnir = "e39a38ff-72a2-4fea-8891-9f0a36e6c5fa"
+Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
@@ -56,7 +57,7 @@ IterTools = "1.4"
 JLD2 = "0.4"
 Optim = "1.7"
 Optimization = "3.12"
-OptimizationOptimJL = "0.1.5"
+OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "5, 6"
 PlotThemes = "3.1"
@@ -64,6 +65,7 @@ Plots = "1.2"
 Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 PyPlot = "2.11"
+ReverseDiff = "1.15.3"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
 Statistics = "1"
