First rough version of the docs
Only tested with local deployment. Needs a lot of work

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,12 @@
+name = "ODINN_docs"
+uuid = "d2f8849c-787d-4b1b-b5c4-4a8e20013fac"
+version = "0.1.0"
+
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-ODINN = "9dfbb203-361a-4d93-bfc6-416f4a72f2e8"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
+ODINN = "c36d5296-eba1-40be-a153-0a8fa632a659"
+
+[compat]
+LiveServer = "1.4.0"
