--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,5 @@
 name = "ODINN_docs"
-uuid = "d2f8849c-787d-4b1b-b5c4-4a8e20013fac"
+uuid = "B966C8A9-24A8-4067-A48F-AF4141166217"
 version = "0.1.0"
 
 [deps]
@@ -7,6 +7,9 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 ODINN = "c36d5296-eba1-40be-a153-0a8fa632a659"
+
+[sources]
+ODINN = { path = ".." }
 
 [compat]
 LiveServer = "1.4.0"
