--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+OrdinaryDiffEqSymplecticRK = "fa646aed-7ef9-47eb-84c4-9443fc8cbfa8"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -57,7 +58,8 @@ Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2"
-OrdinaryDiffEq = "5, 6"
+OrdinaryDiffEq = "6.90.1"
+OrdinaryDiffEqSymplecticRK = "1.1.0"
 PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
@@ -67,7 +69,7 @@ SciMLSensitivity = "7.20"
 Statistics = "1"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
-julia = "1.7"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
