--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,7 +3,7 @@ name: Documentation
 on:
   push:
     branches:
-      - docs # update to match your development branch (master, main, dev, trunk, ...)
+      - new_API # update to match your development branch (master, main, dev, trunk, ...)
     tags: '*'
   pull_request:
 
