--- a/Project.toml
+++ b/Project.toml
@@ -64,6 +64,7 @@ PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
 ProgressMeter = "1"
+Reexport = "1"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
 Statistics = "1"
