CompatHelper: add new compat entry for Sleipnir at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -66,6 +66,7 @@ Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
+Sleipnir = "0.7"
 Statistics = "1"
 TimerOutputs = "0.5.22"
 Tullio = "0.3"
