CompatHelper: bump compat for Optimization to 4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
 Optim = "1.7"
-Optimization = "3.12"
+Optimization = "3.12, 4"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "6.90.1"
