--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ Optimization = "3.12"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "6.90.1"
-OrdinaryDiffEqSymplecticRK = "=1.1.0"
+OrdinaryDiffEqSymplecticRK = "=1.1.0, 1"
 PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
