--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
 Optim = "1.7"
+Optimisers = "0.4"
 Optimization = "3.12"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2"
