--- a/Project.toml
+++ b/Project.toml
@@ -57,7 +57,7 @@ JLD2 = "0.4"
 Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.3"
-OptimizationOptimisers = "0.1.2, 0.2"
+OptimizationOptimisers = "0.1.2, 0.2, 0.3"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
