--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ Huginn = "0.7.1"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
-JLD2 = "0.4"
+JLD2 = "0.4, 0.5"
 Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.3"
