CompatHelper: bump compat for OptimizationOptimJL to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ IterTools = "1.4"
 JLD2 = "0.4"
 Optim = "1.7"
 Optimization = "3.12"
-OptimizationOptimJL = "0.3"
+OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
