--- a/Project.toml
+++ b/Project.toml
@@ -56,11 +56,11 @@ IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
 IterTools = "1.4"
-JLD2 = "0.4"
+JLD2 = "0.4, 0.5"
 Muninn = "0.4"
 Optim = "1.7"
-Optimization = "3.12, 4"
 Optimisers = "0.4"
+Optimization = "3.12, 4"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2, 0.3"
 OrdinaryDiffEq = "6.90.1"
