--- a/Project.toml
+++ b/Project.toml
@@ -59,9 +59,9 @@ IterTools = "1.4"
 JLD2 = "0.4"
 Muninn = "0.4"
 Optim = "1.7"
-Optimization = "3.12, 4"
 Optimisers = "0.4"
-OptimizationOptimJL = "0.3"
+Optimization = "3.12, 4"
+OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.1.2, 0.2, 0.3"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
