CompatHelper: bump compat for OrdinaryDiffEqSymplecticRK to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -59,12 +59,12 @@ IterTools = "1.4"
 JLD2 = "0.4"
 Muninn = "0.4"
 Optim = "1.7"
-Optimization = "3.12, 4"
 Optimisers = "0.4"
+Optimization = "3.12, 4"
 OptimizationOptimJL = "0.3"
 OptimizationOptimisers = "0.1.2, 0.2, 0.3"
 OrdinaryDiffEq = "6.90.1"
-OrdinaryDiffEqSymplecticRK = "=1.1.0"
+OrdinaryDiffEqSymplecticRK = "=1.1.0, 1"
 PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
