CompatHelper: add new compat entry for Muninn at version 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
+Muninn = "0.5"
 Optim = "1.7"
 Optimization = "3.12"
 OptimizationOptimJL = "0.3"
