--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ ChainRules = "1.50"
 Downloads = "1"
 Flux = "0.13, 0.14"
 GR = "0.71, 0.72, 0.73"
-Huginn = "0.7.1"
+Huginn = "0.7.1, 0.8"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
