--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
@@ -36,6 +37,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
