--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ODINN"
 uuid = "c36d5296-eba1-40be-a153-0a8fa632a659"
-authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>"]
+authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>", "Facundo Sapienza <sapienza@stanford.edu>", "Alban Gossard"]
 version = "1.0.0"
 
 [deps]
@@ -12,7 +12,6 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
-Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
@@ -22,6 +21,8 @@ Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
@@ -51,17 +52,12 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 Downloads = "1"
-Flux = "0.13, 0.14"
 GR = "0.71, 0.72, 0.73"
 Huginn = "0.8"
 IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
-Optim = "1.7"
-Optimization = "3.12"
-OptimizationOptimJL = "0.3"
-OptimizationOptimisers = "0.1.2, 0.2"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
