Add Lux to deps

--- a/Project.toml
+++ b/Project.toml
@@ -57,6 +57,7 @@ IJulia = "1.2"
 Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
+Lux = "1.8"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
