CompatHelper: add new compat entry for ImageFiltering at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -51,6 +51,7 @@ Flux = "0.13, 0.14"
 GR = "0.71, 0.72, 0.73"
 Huginn = "0.8"
 IJulia = "1.2"
+ImageFiltering = "0.7"
 Infiltrator = "1.2"
 IterTools = "1.4"
 JLD2 = "0.4"
