CompatHelper: add new compat entry for GeoStats at version 0.78, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -49,6 +49,7 @@ ChainRules = "1.50"
 Downloads = "1"
 Flux = "0.13, 0.14"
 GR = "0.71, 0.72, 0.73"
+GeoStats = "0.78"
 Huginn = "0.8"
 IJulia = "1.2"
 Infiltrator = "1.2"
