--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,14 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 EnzymeCore = "f151be2c-9106-41f4-ab19-57ee4f262869"
+FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
