--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,17 @@
 name: Run Tests
 on:
-   pull_request:
+  pull_request:
     branches: []
-   push:
+  push:
     branches: []
     tags: '*'
+env:
+  PR_NUMBER: ${{ github.event.number }}
+permissions:
+  # needed to allow julia-actions/cache to delete old caches that it has created
+  actions: write
+  contents: read
+  pull-requests: write
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
@@ -27,27 +34,60 @@ jobs:
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - name: Check Julia SSL certifications 🔎🔐
         run: julia -e 'using NetworkOptions; println(NetworkOptions.bundled_ca_roots()); println(NetworkOptions.ca_roots())'
         shell: bash -el {0}
-      - uses: julia-actions/cache@v1
+      - uses: actions/cache@v4
+        env:
+          cache-name: cache-artifacts
         with:
-          cache-registries: "true"
-          cache-compiled: "true"
-      - uses: julia-actions/julia-buildpkg@v1
-        env:
-          # The SSL certificate path can be readed from the action "Check Julia SSL certifications"
-          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
-      - uses: julia-actions/julia-runtest@v1
-        env:
-          SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+      - name: Build Julia packages in Ubuntu
+        uses: julia-actions/julia-buildpkg@v1
+        if: matrix.os == 'ubuntu-latest'
+      - name: Build Julia packages in MacOS
+        uses: julia-actions/julia-buildpkg@v1
+        if: matrix.os == 'macos-latest'
+      - name: Run tests in Ubuntu
+        uses: julia-actions/julia-runtest@v1
+        if: matrix.os == 'ubuntu-latest'
+      - name: Run tests in MacOS
+        uses: julia-actions/julia-runtest@v1
+        if: matrix.os == 'macos-latest'
+      - name: Performance benchmark
+        id: generate-comment
+        run: |
+          julia benchmark/run.jl > benchmark/results.txt
+          outTxt="$(cat benchmark/results.txt)"
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "comment<<$EOF" >> $GITHUB_OUTPUT
+          echo "$outTxt" >> $GITHUB_OUTPUT
+          echo "$EOF" >> $GITHUB_OUTPUT
+        if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
+      - name: Publish benchmark
+        uses: actions/github-script@v6
+        if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: `${{ env.PR_NUMBER }}`,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `${{steps.generate-comment.outputs.comment}}`
+            })
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v5
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           files: lcov.info
