--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -56,6 +57,7 @@ GR = "0.71, 0.72, 0.73"
 Huginn = "0.9"
 IJulia = "1.2"
 Infiltrator = "1.2"
+Interpolations = "0.15.1"
 JLD2 = "0.4"
 Lux = "1.8"
 OrdinaryDiffEq = "6.90.1"
