Add GeoStats.jl again and fix namespace collision with Polynomials.jl

--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 Downloads = "1"
 GR = "0.71, 0.72, 0.73"
+GeoStats = "0.73.4"
 Huginn = "0.9.1"
 IJulia = "1.2"
 Infiltrator = "1.2"
