--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,7 @@ jobs:
           - '1.10'
         os:
           - ubuntu-latest
+          - macos-latest
         arch:
           - x64
     steps:
@@ -64,28 +65,28 @@ jobs:
       - name: Run tests in MacOS
         uses: julia-actions/julia-runtest@v1
         if: matrix.os == 'macos-latest'
-      - name: Performance benchmark
-        id: generate-comment
-        run: |
-          julia benchmark/run.jl > benchmark/results.txt
-          outTxt="$(cat benchmark/results.txt)"
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "comment<<$EOF" >> $GITHUB_OUTPUT
-          echo "$outTxt" >> $GITHUB_OUTPUT
-          echo "$EOF" >> $GITHUB_OUTPUT
-        if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
-      - name: Publish benchmark
-        uses: actions/github-script@v6
-        if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: `${{ env.PR_NUMBER }}`,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `${{steps.generate-comment.outputs.comment}}`
-            })
+      # - name: Performance benchmark
+      #   id: generate-comment
+      #   run: |
+      #     julia benchmark/run.jl > benchmark/results.txt
+      #     outTxt="$(cat benchmark/results.txt)"
+      #     EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+      #     echo "comment<<$EOF" >> $GITHUB_OUTPUT
+      #     echo "$outTxt" >> $GITHUB_OUTPUT
+      #     echo "$EOF" >> $GITHUB_OUTPUT
+      #   if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
+      # - name: Publish benchmark
+      #   uses: actions/github-script@v6
+      #   if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     script: |
+      #       github.rest.issues.createComment({
+      #         issue_number: `${{ env.PR_NUMBER }}`,
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         body: `${{steps.generate-comment.outputs.comment}}`
+      #       })
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
         with:
